changed the nav bar width so the text doesn't wrap anymore; deleted edit and delete buttons on user hours index; got the rate/hours to show for profile and admin select employee; got the role name to show for the first employee in teh employee index-- need to fix for all employees

--- a/parcel-frontend/style.css
+++ b/parcel-frontend/style.css
@@ -20,7 +20,7 @@ nav {
 mainnav {
   display: flex;
   justify-content: space-around;
-  width: 33%;
+  width: 50%;
   align-items: center;
   display: none;
 }
@@ -52,7 +52,7 @@ n:hover {
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
